--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate",
     "predeploy": "npm audit",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku main",
+    "postdeploy": "npm run migrate:production"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "postgrator-cli": "^3.2.0",
     "winston": "^3.3.3",
