--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "postdeploy": "npm run migrate:production"
   },
   "keywords": [],
+  "engines": {
+    "node": "14.15.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
