--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.6.0",
